[package]
name = "update-binary_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
zip = "0.6"
shell-words = "1.1"
zstd = "0.12"
flate2 = "1.0"
tar = "0.4"
regex = "1.10"
libc = "0.2"
byteorder = "1.4"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "update-binary"
path = "src/main.rs"